# src/api/routes/product_routes.rs
@@ -9,4 +9,6 @@ pub fn routes() -> Router {
         .route("/{id}", get(product_controller::get_product_by_id))
         .route("/{id}", put(product_controller::update_product))
         .route("/{id}", delete(product_controller::delete_product))
+        .route("/{id}/image", post(product_controller::upload_product_image))
+        .route("/{id}/image", delete(product_controller::delete_product_image))
 }
